feat: base structure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,41 +9,22 @@ services:
       - "5672:5672"
       - "15672:15672"
 
-  db-main-master:
+  postgres:
       restart: always
       image: docker.io/bitnami/postgresql:14
-      container_name: db-main-master
+      container_name: postgres
       volumes:
-        - "db_main_master_data:/bitnami/postgresql"
+        - "postgres_data:/bitnami/postgresql"
       ports:
-        - 52155:5432
+        - 5432:5432
       environment:
-        POSTGRESQL_REPLICATION_MODE: master
-        POSTGRESQL_REPLICATION_USER: postgres
-        POSTGRESQL_REPLICATION_PASSWORD: postgres
         POSTGRESQL_USERNAME: postgres
         POSTGRESQL_PASSWORD: postgres
         POSTGRESQL_DATABASE: db_main_data
 
-  db-main-slave:
-      restart: always
-      container_name: db-main-slave
-      image: docker.io/bitnami/postgresql:14
-      depends_on:
-        - db-main-master
-      ports:
-        - 52156:5432
-      environment:
-        POSTGRESQL_REPLICATION_MODE: slave
-        POSTGRESQL_REPLICATION_USER: postgres
-        POSTGRESQL_REPLICATION_PASSWORD: postgres
-        POSTGRESQL_MASTER_HOST:  db-main-master 
-        POSTGRESQL_PASSWORD: postgres
-        POSTGRESQL_MASTER_PORT_NUMBER: 5432
-
-  redis-shop-advanced-primary:
+  redis:
     restart: always
-    container_name: redis-shop-advanced-primary
+    container_name: redis
     image: redis/redis-stack-server:latest
     ports:
       - "6379:6379"
@@ -51,19 +32,8 @@ services:
       - "redis_data:/data"
     command: redis-server --requirepass mypassword
 
-  redis-shop-advanced-secondary:
-    restart: always
-    container_name: redis-shop-advanced-secondary
-    image: redis/redis-stack-server:latest
-    ports:
-      - "6479:6379"
-    depends_on:
-      - redis-shop-advanced-primary 
-    command: redis-server --masterauth mypassword --requirepass mypassword --slaveof redis-primary 6379
-
 volumes:
   redis_data:
   rabbit_data:
-  db_main_master_data:
+  postgres_data:
     driver: local
-  
