--- a/package.json
+++ b/package.json
@@ -18,18 +18,20 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-     "migration:generate": "yarn run typeorm  migration:generate -d  src/database/data-source.config.ts src/database",
+    "migration:generate": "yarn run typeorm  migration:generate -d  src/database/data-source.config.ts src/database",
     "migrate": "yarn run typeorm  migration:run -d ./dist/database/data-source.config.js",
     "migration:revert": "yarn run typeorm  migration:revert",
     "migration:generate:name": "yarn run typeorm  --migration:generate -d src/database -n $npm_config_name",
     "migration:run:name": "yarn build && yarn run typeorm  migration:run",
-    "migration:revert:name": "yarn run typeorm  migration:revert" 
+    "migration:revert:name": "yarn run typeorm  migration:revert"
   },
   "dependencies": {
+    "@nestjs/apollo": "^12.2.2",
     "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.2.2",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.1",
@@ -39,6 +41,7 @@
     "@tirke/node-cache-manager-ioredis": "^3.6.0",
     "@types/multer": "^1.4.11",
     "@types/socket.io": "^3.0.2",
+    "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -46,6 +49,7 @@
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
+    "graphql": "^16.10.0",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "nestjs-pino": "^4.1.0",
