--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "graphql": "^16.10.0",
+    "ioredis": "^5.4.2",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "nestjs-pino": "^4.1.0",
