--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shop-advanced",
+  "name": "bt",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -26,6 +26,7 @@
     "migration:revert:name": "yarn run typeorm  migration:revert"
   },
   "dependencies": {
+     "@nestjs/cli": "^10.0.0",
     "@nestjs/apollo": "^12.2.2",
     "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
